--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,7 @@
   --spaceing-four: calc(3rem);
   --brown:#4d332d;
   --lightbrown:#7a5e57;
-  --me:#c1998f;
+  --me:rgb(193, 153, 143);
   --darkbrown:#260e04;
   --sand:rgb(188, 96, 57);
   --orch:rgb(217, 143, 69);
@@ -54,14 +54,17 @@ body {
   background-color: var(--me);
   font-family: 'Montserrat';
   font-family: Montserrat;
+  
 }
 .logo{
   border-radius: 0.5rem;
   width: 40px;
   height: 40px;
 }
-
-
+/* 
+.down {
+  top:20%;
+} */
 /* background gradient colours */
 /* pink */
 .bottom {
@@ -115,6 +118,16 @@ body {
   top:-80%; 
   left:45%;
   /* right:50%; */
+}
+
+.graphic {
+  position: absolute;
+  top:-260%; 
+  right:10%;
+  z-index: 0;
+  width: 100px;
+  height: 100px;
+  border-radius: 2rem;
 }
 
 h1,
@@ -653,6 +666,16 @@ border-radius: 1rem;
 
 
 @media screen and (max-width: 768px) {
+
+  .graphic {
+    position: absolute;
+    top:-140%; 
+    left:-4%;
+    z-index: 0;
+    width: 100px;
+    height: 100px;
+    border-radius: 2rem;
+  }
   /* main cover page */
 .bottom {
   height: max-content;
