--- a/client/src/index.css
+++ b/client/src/index.css
@@ -671,7 +671,7 @@ border-radius: 1rem;
   .graphic {
     position: absolute;
     top:50%; 
-    left:-4%;
+    right:-8%;
     width: 100px;
     height: 100px;
     border-radius: 2rem;
