--- a/client/src/index.css
+++ b/client/src/index.css
@@ -702,7 +702,14 @@ border-radius: 1rem;
     height: 100px;
   }
 
-
+  .gra {
+    top:70%; 
+    right:5%;
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    padding:1%;
+  }
   /* main cover page */
 .bottom {
   height: max-content;
