--- a/client/src/index.css
+++ b/client/src/index.css
@@ -128,6 +128,8 @@ body {
   width: 200px;
   height: 200px;
   border-radius: 2rem;
+  
+  opacity: .6;
 }
 
 .graph {
@@ -136,6 +138,7 @@ body {
   left:-10.5%;
   width: 100px;
   height: 100px;
+  opacity: .6;
 }
 
 .gra {
@@ -145,6 +148,7 @@ body {
   width: 200px;
   height: 200px;
   padding:1%;
+  opacity: .6;
 }
 
 h1,
@@ -693,6 +697,7 @@ border-radius: 1rem;
   width: 200px;
   height: 200px;
     border-radius: 2rem;
+    
   }
   .graph {
     position: absolute;
