--- a/client/src/index.css
+++ b/client/src/index.css
@@ -579,7 +579,7 @@ input:focus {
  overflow-x: hidden;
  box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
  margin-top: calc(3rem);
- /* height:10%; */
+ height:400px;
 }
 
 /* Artist bio title */
@@ -786,7 +786,8 @@ border-radius: 1rem;
     margin-left:50%;
    overflow-x: hidden;
    box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
-   margin-top: calc(3rem);
+   margin-top: calc(2rem);
+   height: 100%;
   }
 
   /* Photo for ArtBio age */
