--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,7 @@
   --spaceing-four: calc(3rem);
   --brown:rgb(77, 51, 45);
   --lightbrown:#7a5e57;
-  --me:rgb(193, 153, 143);
+  --me:#c1998f;
   --darkbrown:#260e04;
   --sand:rgb(188, 96, 57);
   --orch:rgb(217, 143, 69);
