--- a/client/src/index.css
+++ b/client/src/index.css
@@ -67,9 +67,9 @@ body {
 } */
 /* background gradient colours */
 /* pink */
-.bottom {
+/* .bottom {
   background-image: linear-gradient(to bottom, #c1998f, #bf978d, #bc958b, #ba938a, #b89188, #bc8d85, #bf8882, #c28381, #cb7983, #d16f8a, #d46696, #d25ea6);
-}
+} */
 
 .top {
   background-image: linear-gradient(to top, #c1998f, #c0988e, #c0978d, #bf968c, #be958b, #c29188, #c58c85, #c98783, #d07c85, #d5718b, #d66697, #d25ea6);
@@ -421,7 +421,7 @@ input:focus {
 
 .bedford {
   font-family: 'Rock Salt', cursive;
-
+  color:var(--sand);
 }
 
 .intro {
@@ -439,6 +439,7 @@ input:focus {
   margin-left: auto;
   margin-right: auto;
   background-color: var(--darkbrown);
+  border: none;
 }
 
 .flex-row {
@@ -738,7 +739,7 @@ border-radius: 1rem;
   width: 200px;
   height: 200px;
     border-radius: 2rem;
-    margin-top: calc(-7.5rem);
+    margin-top: calc(-8rem);
   }
   .graph {
     position: absolute;
