--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,7 +14,7 @@
   --me:rgb(193, 153, 143);
   --darkbrown:#260e04;
   --sand:rgb(188, 96, 57);
-  --orch:rgb(217, 143, 69);
+  --orch:#d98f45;
   --light:#fff1b7ea;
   --yellow:#e6c240;
   --lemon:rgb(248, 218, 48);
