--- a/client/src/index.css
+++ b/client/src/index.css
@@ -749,10 +749,10 @@ border-radius: 1rem;
   }
   .graph {
     position: absolute;
-    margin-top: calc(-10rem);
+    margin-top: calc(-8rem);
     width:1200px;
     /* margin-left: calc(-15.5em); */
-    height:200px;
+    /* height:200px; */
     /* max-width: 1200px;
     margin-left: auto;
     margin-right: auto; */
