--- a/client/src/index.css
+++ b/client/src/index.css
@@ -575,7 +575,7 @@ input:focus {
   /* margin-left: 5%; */
   position:absolute;
   text-align: left;
-  top:9.5rem;
+  top: 10.1em;
   border: none;
   margin-left:40%;
  overflow-x: hidden;
